--- a/TODO
+++ b/TODO
@@ -128,6 +128,17 @@ E => generer une trace visible au moment du boot (variable Yocto ?)
 
 -----------------
 
+0  => consolider affichage commencé des temps "moteurs" , temps "reel" 
+      et mettre en place une API de choix de methode "sleep" et de mesure
+      ... usleep         ... cleck-gettime 
+      ... nanolsleep     ... gettimeofday
+      etc..
+
+0  => mettre en place mutex systematiquement dans toutes les structures
+
+0  => en se basant sur ce qui a ete fait sur mesdep , consolider les etats
+      cancell des threads pour pouvoir les arrêter sur demande
+      
 0  => consolider affichage LCD (touche Fx clavier) 
       generer de facon approprie les logs (usure SDCARD ? => etudier)  
 
